refactor: fetchPrayerTimes based on config's prayer zone and add more error handling

--- a/package.json
+++ b/package.json
@@ -22,16 +22,6 @@
       {
         "title": "Malaysia Prayer Reminder",
         "properties": {
-          "myPrayerReminder.state": {
-            "type": "string",
-            "default": "selangor",
-            "description": "Enter your state"
-          },
-          "myPrayerReminder.zone": {
-            "type": "string",
-            "default": "kuala selangor",
-            "description": "Enter your state's zone"
-          },
           "myPrayerReminder.timer": {
             "type": "number",
             "default": 5,
@@ -41,6 +31,161 @@
             "type": "boolean",
             "default": false,
             "description": "Choose whether to always show the prayer countdown or only after the reminder shown up."
+          },
+          "myPrayerReminder.zone": {
+            "type": "string",
+            "default": "SGR01 - Gombak, Petaling, Sepang, Hulu Langat, Hulu Selangor, S. Alam",
+            "description": "Select your prayer zone.",
+            "enum": [
+              "=== JOHOR ===",
+              "JHR01 - Pulau Aur, Pulau Pemanggil",
+              "JHR02 - Johor Bahru, Kota Tinggi, Mersing, Kulai",
+              "JHR03 - Kluang, Pontian",
+              "JHR04 - Batu Pahat, Muar, Segamat, Gemas Johor, Tangkak",
+              "=== KEDAH === ",
+              "KDH01 - Kota Setar, Kubang Pasu, Pokok Sena (Daerah Kecil)",
+              "KDH02 - Kuala Muda, Yan, Pendang",
+              "KDH03 - Padang Terap, Sik",
+              "KDH04 - Baling",
+              "KDH05 - Bandar Baharu, Kulim",
+              "KDH06 - Langkawi",
+              "KDH07 - Puncak Gunung Jerai",
+              "=== KELANTAN ===",
+              "KTN01 - Bachok, Kota Bharu, Machang, Pasir Mas, Pasir Puteh, Tanah Merah, Tumpat, Kuala Krai, Mukim Chiku",
+              "KTN02 - Gua Musang (Daerah Galas Dan Bertam), Jeli, Jajahan Kecil Lojing",
+              "=== MELAKA ===",
+              "MLK01 - SELURUH NEGERI MELAKA",
+              "=== NEGERI SEMBILAN ===",
+              "NGS01 - Tampin, Jempol",
+              "NGS02 - Jelebu, Kuala Pilah, Rembau",
+              "NGS03 - Port Dickson, Seremban",
+              "=== PAHANG ===",
+              "PHG01 - Pulau Tioman",
+              "PHG02 - Kuantan, Pekan, Rompin, Muadzam Shah",
+              "PHG03 - Jerantut, Temerloh, Maran, Bera, Chenor, Jengka",
+              "PHG04 - Bentong, Lipis, Raub",
+              "PHG05 - Genting Sempah, Janda Baik, Bukit Tinggi",
+              "PHG06 - Cameron Highlands, Genting Higlands, Bukit Fraser",
+              "=== PERLIS ===",
+              "PLS01 - Kangar, Padang Besar, Arau",
+              "=== PULAU PINANG ===",
+              "PNG01 - Seluruh Negeri Pulau Pinang",
+              "=== PERAK ===",
+              "PRK01 - Tapah, Slim River, Tanjung Malim",
+              "PRK02 - Kuala Kangsar, Sg. Siput , Ipoh, Batu Gajah, Kampar",
+              "PRK03 - Lenggong, Pengkalan Hulu, Grik",
+              "PRK04 - Temengor, Belum",
+              "PRK05 - Kg Gajah, Teluk Intan, Bagan Datuk, Seri Iskandar, Beruas, Parit, Lumut, Sitiawan, Pulau Pangkor",
+              "PRK06 - Selama, Taiping, Bagan Serai, Parit Buntar",
+              "PRK07 - Bukit Larut",
+              "=== SABAH ===",
+              "SBH01 - Bahagian Sandakan (Timur), Bukit Garam, Semawang, Temanggong, Tambisan, Bandar Sandakan, Sukau",
+              "SBH02 - Beluran, Telupid, Pinangah, Terusan, Kuamut, Bahagian Sandakan (Barat)",
+              "SBH03 - Lahad Datu, Silabukan, Kunak, Sahabat, Semporna, Tungku, Bahagian Tawau  (Timur)",
+              "SBH04 - Bandar Tawau, Balong, Merotai, Kalabakan, Bahagian Tawau (Barat)",
+              "SBH05 - Kudat, Kota Marudu, Pitas, Pulau Banggi, Bahagian Kudat",
+              "SBH06 - Gunung Kinabalu",
+              "SBH07 - Kota Kinabalu, Ranau, Kota Belud, Tuaran, Penampang, Papar, Putatan, Bahagian Pantai Barat",
+              "SBH08 - Pensiangan, Keningau, Tambunan, Nabawan, Bahagian Pendalaman (Atas)",
+              "SBH09 - Beaufort, Kuala Penyu, Sipitang, Tenom, Long Pasia, Membakut, Weston, Bahagian Pendalaman (Bawah)",
+              "=== SELANGOR ===",
+              "SGR01 - Gombak, Petaling, Sepang, Hulu Langat, Hulu Selangor, S. Alam",
+              "SGR02 - Kuala Selangor, Sabak Bernam",
+              "SGR03 - Klang, Kuala Langat",
+              "=== SARAWAK ===",
+              "SWK01 - Limbang, Lawas, Sundar, Trusan",
+              "SWK02 - Miri, Niah, Bekenu, Sibuti, Marudi",
+              "SWK03 - Pandan, Belaga, Suai, Tatau, Sebauh, Bintulu",
+              "SWK04 - Sibu, Mukah, Dalat, Song, Igan, Oya, Balingian, Kanowit, Kapit",
+              "SWK05 - Sarikei, Matu, Julau, Rajang, Daro, Bintangor, Belawai",
+              "SWK06 - Lubok Antu, Sri Aman, Roban, Debak, Kabong, Lingga, Engkelili, Betong, Spaoh, Pusa, Saratok",
+              "SWK07 - Serian, Simunjan, Samarahan, Sebuyau, Meludam",
+              "SWK08 - Kuching, Bau, Lundu, Sematan",
+              "SWK09 - Zon Khas (Kampung Patarikan)",
+              "=== TERENGGANU ===",
+              "TRG01 - Kuala Terengganu, Marang, Kuala Nerus",
+              "TRG02 - Besut, Setiu",
+              "TRG03 - Hulu Terengganu",
+              "TRG04 - Dungun, Kemaman",
+              "=== WILAYAH PERSEKUTUAN ===",
+              "WLY01 - Kuala Lumpur, Putrajaya",
+              "WLY02 - Labuan"
+            ],
+            "enumDescriptions": [
+              "=== JOHOR ====",
+              "Pulau Aur, Pulau Pemanggil",
+              "Johor Bahru, Kota Tinggi, Mersing, Kulai",
+              "Kluang, Pontian",
+              "Batu Pahat, Muar, Segamat, Gemas Johor, Tangkak",
+              "=== KEDAH ===",
+              "Kota Setar, Kubang Pasu, Pokok Sena (Daerah Kecil)",
+              "Kuala Muda, Yan, Pendang",
+              "Padang Terap, Sik",
+              "Baling",
+              "Bandar Baharu, Kulim",
+              "Langkawi",
+              "Puncak Gunung Jerai",
+              "=== KELANTAN ===",
+              "Bachok, Kota Bharu, Machang, Pasir Mas, Pasir Puteh, Tanah Merah, Tumpat, Kuala Krai, Mukim Chiku",
+              "Gua Musang (Daerah Galas Dan Bertam), Jeli, Jajahan Kecil Lojing",
+              "=== MELAKA ===",
+              "SELURUH NEGERI MELAKA",
+              "=== NEGERI SEMBILAN ===",
+              "Tampin, Jempol",
+              "Jelebu, Kuala Pilah, Rembau",
+              "Port Dickson, Seremban",
+              "=== PAHANG ===",
+              "Pulau Tioman",
+              "Kuantan, Pekan, Rompin, Muadzam Shah",
+              "Jerantut, Temerloh, Maran, Bera, Chenor, Jengka",
+              "Bentong, Lipis, Raub",
+              "Genting Sempah, Janda Baik, Bukit Tinggi",
+              "Cameron Highlands, Genting Higlands, Bukit Fraser",
+              "=== PERLIS ===",
+              "Kangar, Padang Besar, Arau",
+              "=== PULAU PINANG ===",
+              "Seluruh Negeri Pulau Pinang",
+              "=== PERAK ===",
+              "Tapah, Slim River, Tanjung Malim",
+              "Kuala Kangsar, Sg. Siput , Ipoh, Batu Gajah, Kampar",
+              "Lenggong, Pengkalan Hulu, Grik",
+              "Temengor, Belum",
+              "Kg Gajah, Teluk Intan, Bagan Datuk, Seri Iskandar, Beruas, Parit, Lumut, Sitiawan, Pulau Pangkor",
+              "Selama, Taiping, Bagan Serai, Parit Buntar",
+              "Bukit Larut",
+              "=== SABAH ===",
+              "Bahagian Sandakan (Timur), Bukit Garam, Semawang, Temanggong, Tambisan, Bandar Sandakan, Sukau",
+              "Beluran, Telupid, Pinangah, Terusan, Kuamut, Bahagian Sandakan (Barat)",
+              "Lahad Datu, Silabukan, Kunak, Sahabat, Semporna, Tungku, Bahagian Tawau  (Timur)",
+              "Bandar Tawau, Balong, Merotai, Kalabakan, Bahagian Tawau (Barat)",
+              "Kudat, Kota Marudu, Pitas, Pulau Banggi, Bahagian Kudat",
+              "Gunung Kinabalu",
+              "Kota Kinabalu, Ranau, Kota Belud, Tuaran, Penampang, Papar, Putatan, Bahagian Pantai Barat",
+              "Pensiangan, Keningau, Tambunan, Nabawan, Bahagian Pendalaman (Atas)",
+              "Beaufort, Kuala Penyu, Sipitang, Tenom, Long Pasia, Membakut, Weston, Bahagian Pendalaman (Bawah)",
+              "=== SELANGOR ===",
+              "Gombak, Petaling, Sepang, Hulu Langat, Hulu Selangor, S. Alam",
+              "Kuala Selangor, Sabak Bernam",
+              "Klang, Kuala Langat",
+              "=== SARAWAK ===",
+              "Limbang, Lawas, Sundar, Trusan",
+              "Miri, Niah, Bekenu, Sibuti, Marudi",
+              "Pandan, Belaga, Suai, Tatau, Sebauh, Bintulu",
+              "Sibu, Mukah, Dalat, Song, Igan, Oya, Balingian, Kanowit, Kapit",
+              "Sarikei, Matu, Julau, Rajang, Daro, Bintangor, Belawai",
+              "Lubok Antu, Sri Aman, Roban, Debak, Kabong, Lingga, Engkelili, Betong, Spaoh, Pusa, Saratok",
+              "Serian, Simunjan, Samarahan, Sebuyau, Meludam",
+              "Kuching, Bau, Lundu, Sematan",
+              "Zon Khas (Kampung Patarikan)",
+              "=== TERENGGANU ===",
+              "Kuala Terengganu, Marang, Kuala Nerus",
+              "Besut, Setiu",
+              "Hulu Terengganu",
+              "Dungun, Kemaman",
+              "=== WILAYAH PERSEKUTUAN ===",
+              "Kuala Lumpur, Putrajaya",
+              "Labuan"
+            ]
           }
         }
       }
