config: fix enum value for melaka and pulau pinang

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
               "KTN01 - Bachok, Kota Bharu, Machang, Pasir Mas, Pasir Puteh, Tanah Merah, Tumpat, Kuala Krai, Mukim Chiku",
               "KTN02 - Gua Musang (Daerah Galas Dan Bertam), Jeli, Jajahan Kecil Lojing",
               "=== MELAKA ===",
-              "MLK01 - SELURUH NEGERI MELAKA",
+              "MLK01 - Melaka",
               "=== NEGERI SEMBILAN ===",
               "NGS01 - Tampin, Jempol",
               "NGS02 - Jelebu, Kuala Pilah, Rembau",
@@ -69,7 +69,7 @@
               "=== PERLIS ===",
               "PLS01 - Kangar, Padang Besar, Arau",
               "=== PULAU PINANG ===",
-              "PNG01 - Seluruh Negeri Pulau Pinang",
+              "PNG01 - Pulau Pinang",
               "=== PERAK ===",
               "PRK01 - Tapah, Slim River, Tanjung Malim",
               "PRK02 - Kuala Kangsar, Sg. Siput , Ipoh, Batu Gajah, Kampar",
@@ -129,7 +129,7 @@
               "Bachok, Kota Bharu, Machang, Pasir Mas, Pasir Puteh, Tanah Merah, Tumpat, Kuala Krai, Mukim Chiku",
               "Gua Musang (Daerah Galas Dan Bertam), Jeli, Jajahan Kecil Lojing",
               "=== MELAKA ===",
-              "SELURUH NEGERI MELAKA",
+              "Seluruh Negeri Melaka",
               "=== NEGERI SEMBILAN ===",
               "Tampin, Jempol",
               "Jelebu, Kuala Pilah, Rembau",
