config: fix sabah and sarawak zones enum value

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
               "PRK06 - Selama, Taiping, Bagan Serai, Parit Buntar",
               "PRK07 - Bukit Larut",
               "=== SABAH ===",
-              "SBH01 - Bahagian Sandakan (Timur), Bukit Garam, Semawang, Temanggong, Tambisan, Bandar Sandakan, Sukau",
+              "SBH01 - Bukit Garam, Bahagian Sandakan (Timur), Semawang, Temanggong, Tambisan, Bandar Sandakan, Sukau",
               "SBH02 - Beluran, Telupid, Pinangah, Terusan, Kuamut, Bahagian Sandakan (Barat)",
               "SBH03 - Lahad Datu, Silabukan, Kunak, Sahabat, Semporna, Tungku, Bahagian Tawau  (Timur)",
               "SBH04 - Bandar Tawau, Balong, Merotai, Kalabakan, Bahagian Tawau (Barat)",
@@ -101,7 +101,7 @@
               "SWK06 - Lubok Antu, Sri Aman, Roban, Debak, Kabong, Lingga, Engkelili, Betong, Spaoh, Pusa, Saratok",
               "SWK07 - Serian, Simunjan, Samarahan, Sebuyau, Meludam",
               "SWK08 - Kuching, Bau, Lundu, Sematan",
-              "SWK09 - Zon Khas (Kampung Patarikan)",
+              "SWK09 - Kampung Patarikan",
               "=== TERENGGANU ===",
               "TRG01 - Kuala Terengganu, Marang, Kuala Nerus",
               "TRG02 - Besut, Setiu",
