--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "my-prayer-reminder",
   "displayName": "Malaysia Prayer Reminder",
+  "publisher": "atmahana",
+  "icon": "https://i.imgur.com/8VL07jX.png",
   "description": "An extension to remind the prayer time (Malaysia only)",
+  "repository": {
+    "url": "https://github.com/atmahana/malaysia-prayer-reminder"
+  },
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.85.0"
